syntax = "proto3";

package io.mystore.shipping.action;

import "akkaserverless/annotations.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

option java_outer_classname = "StockFrontendService";

service StockItemFrontend {
  option (akkaserverless.codegen) = {
    action: {}
  };

  rpc createStockItems(CreateStockRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/stock-item-frontend/{sku_id}/create"
      body: "*"
    };
  }
}

message CreateStockRequest {
  string sku_id = 1;
  string sku_name = 2;
  int32 quantity = 3;
}
